--- a/angular.json
+++ b/angular.json
@@ -44,6 +44,27 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true
+            },
+            "pt": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "outputPath": "dist/my-app-pt/",
+              "i18nFile": "src/locale/textos.pt.xlf",
+              "i18nFormat": "xlf",
+              "i18nLocale": "pt"
             }
           }
         },
@@ -55,6 +76,9 @@
           "configurations": {
             "production": {
               "browserTarget": "my-app:build:production"
+            },
+            "pt": {
+              "browserTarget": "my-app:build:pt"
             }
           }
         },
