--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "my-app2": {
+    "pokedex": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/browser",
+            "outputPath": "dist/pokedex",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -50,18 +50,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "my-app2:build"
+            "browserTarget": "pokedex:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "my-app2:build:production"
+              "browserTarget": "pokedex:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "my-app2:build"
+            "browserTarget": "pokedex:build"
           }
         },
         "test": {
@@ -92,18 +92,10 @@
               "**/node_modules/**"
             ]
           }
-        },
-        "server": {
-          "builder": "@angular-devkit/build-angular:server",
-          "options": {
-            "outputPath": "dist/server",
-            "main": "src/main.server.ts",
-            "tsConfig": "src/tsconfig.server.json"
-          }
         }
       }
     },
-    "my-app2-e2e": {
+    "pokedex-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -111,11 +103,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "my-app2:serve"
+            "devServerTarget": "pokedex:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "my-app2:serve:production"
+              "devServerTarget": "pokedex:serve:production"
             }
           }
         },
@@ -131,5 +123,5 @@
       }
     }
   },
-  "defaultProject": "my-app2"
+  "defaultProject": "pokedex"
 }
