--- a/angular.json
+++ b/angular.json
@@ -44,6 +44,13 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true
+            },
+            "pt": {
+              "aot": true,
+              "outputPath": "dist/pokedex-pt",
+              "i18nFile": "src/locale/messages.pt.xlf",
+              "i18nFormat": "xlf",
+              "i18nLocale": "pt"
             }
           }
         },
@@ -55,6 +62,9 @@
           "configurations": {
             "production": {
               "browserTarget": "pokedex:build:production"
+            },
+            "pt": {
+              "browserTarget": "pokedex:build:pt"
             }
           }
         },
